Upgrade to Java 21, with Openrewrite